Encoding issue fixed, addthis added

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,38 +7,34 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>TheJuice</title>
         <meta name="description" content="The juice helps teachers translate their knowledge into a language students understand">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/img/ico/apple-touch-icon.png">
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/ico/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/static/img/ico/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/static/img/ico/favicon-16x16.png">
         <link rel="manifest" href="/static/img/ico/manifest.json">
         <link rel="mask-icon" href="/static/img/ico/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="shortcut icon" href="/static/img/ico/favicon.ico">
-        <meta name="msapplication-config" content="/static/img/ico/browserconfig.xml">
-        <meta name="theme-color" content="#ffffff">
-        <meta name="msapplication-TileImage" content="/static/img/ico/ms-icon-144x144.png">
-        <meta name="theme-color" content="#ffffff">
-        <PageMap>
-             <DataObject type="thumbnail">
-               <Attribute name="src" value="/static/img/ico/android-icon-192x192.png"/>
-               <Attribute name="width" value="100"/>
-               <Attribute name="height" value="130"/>
-             </DataObject>
-           </PageMap>
+		<PageMap>
+			<DataObject type="thumbnail">
+				<Attribute name="src" value="/static/img/ico/android-icon-192x192.png"/>
+				<Attribute name="width" value="100"/>
+				<Attribute name="height" value="130"/>
+			</DataObject>
+		</PageMap>
 
         <meta name="thumbnail" content="/static/img/ico/android-icon-192x192.png" />
 
         <!--facebook-->
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Takethejuice">
+        <meta property="og:title" content="TheJuice">
         <meta property="og:description" content="Translating teachers knowledge to fit into pupils social media">
-        <meta property="og:image" content="http://takethejuice.com//static/img/thumbnail.png">
+        <meta property="og:image" content="http://takethejuice.com/assets/images/thumbnail.png">
         <meta property="og:url" content="http://takethejuice.com/">
 
         <!--twitter-->
-        <meta name="twitter:title" content="Takethejuice">
-        <meta name="twitter:description" content=" Translating teachers knowledge to fit into pupils social media">
-        <meta name="twitter:image" content="http://takethejuice.com//static/img/thumbnail.png">
+        <meta name="twitter:title" content="TheJuice">
+        <meta name="twitter:description" content="Translating teachers knowledge to fit into pupils social media">
+        <meta name="twitter:image" content="http://takethejuice.com/assets/images/thumbnail.png">
         <meta name="twitter:card" content="summary_large_image">
 	</head>
 	<body>
