--- a/templates/formats/infographic.html
+++ b/templates/formats/infographic.html
@@ -4,10 +4,43 @@
 		<meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/static/style/infographic.css"/>
-		<title>{{ title }} - theJuice</title>
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="description" content="The juice helps teachers translate their knowledge into a language students understand">
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/ico/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/img/ico/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/img/ico/favicon-16x16.png">
+        <link rel="manifest" href="/static/img/ico/manifest.json">
+        <link rel="mask-icon" href="/static/img/ico/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="/static/img/ico/favicon.ico">
+		<PageMap>
+			<DataObject type="thumbnail">
+				<Attribute name="src" value="/static/img/ico/android-icon-192x192.png"/>
+				<Attribute name="width" value="100"/>
+				<Attribute name="height" value="130"/>
+			</DataObject>
+		</PageMap>
+
+        <meta name="thumbnail" content="/static/img/ico/android-icon-192x192.png" />
+
+        <!--facebook-->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="{{ title }} - TheJuice">
+        <meta property="og:description" content="Translating teachers knowledge to fit into pupils social media">
+        <meta property="og:image" content="{{ picture }}">
+        <meta property="og:url" content="http://history.takethejuice.com/">
+
+        <!--twitter-->
+        <meta name="twitter:title" content="{{ title }} - TheJuice">
+        <meta name="twitter:description" content="Translating teachers knowledge to fit into pupils social media">
+        <meta name="twitter:image" content="{{ picture }}">
+        <meta name="twitter:card" content="summary_large_image">
 	</head>
 	<body>
-		<div class="wrapper">
+		<button id="download">Download</button>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5911c8ad46bf8abe"></script>
+		<div class="wrapper" id="downloadable">
 			<div class="header">
 				{% if picture %}
 					<div class="image" style="background-image: url('{{ picture }}')"></div>
@@ -44,8 +77,10 @@
 			{% endfor %}
 
 			<div class="logo">
-				<img src="/static/img/logo.svg"/>
+				<img src="/static/img/logo.png"/>
 			</div>
 		</div>
+		<script src="/static/js/html2canvas.js"></script>
+		<script src="/static/js/download.js"></script>
 	</body>
 </html>
