--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,7 @@
 {% block body %}
 	<div class="search-form">
 		<form method="GET" action="/pills">
-			<input type="text" name="query" placeholder="{{ query or 'Busca algún personaje famoso...'}}" autocomplete="off"/>
+			<input type="text" name="query" placeholder="Busca algún personaje famoso..." autocomplete="off"/>
 			<button class="button" type="submit">
 				<span class="icon">
 					<i class="fa fa-search"></i>
