--- a/templates/formats/infographic.html
+++ b/templates/formats/infographic.html
@@ -38,8 +38,9 @@
         <meta name="twitter:card" content="summary_large_image">
 	</head>
 	<body>
-		<button id="download">Download</button>
-		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5911c8ad46bf8abe"></script>
+		<div class="wrapper">
+			<div class="addthis_inline_share_toolbox"></div>
+		</div>
 		<div class="wrapper" id="downloadable">
 			<div class="header">
 				{% if picture %}
@@ -82,5 +83,6 @@
 		</div>
 		<script src="/static/js/html2canvas.js"></script>
 		<script src="/static/js/download.js"></script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5911c8ad46bf8abe"></script>
 	</body>
 </html>
