--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,17 @@
         <meta name="twitter:description" content="Translating teachers knowledge to fit into pupils social media">
         <meta name="twitter:image" content="http://takethejuice.com/assets/images/thumbnail.png">
         <meta name="twitter:card" content="summary_large_image">
+
+		<!-- GA -->
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-92654268-2', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<div class="main-logo">
