--- a/templates/formats/infographic.html
+++ b/templates/formats/infographic.html
@@ -42,7 +42,7 @@
 		<div class="wrapper">
 			<div class="addthis_inline_share_toolbox"></div>
 		</div>
-		<div class="wrapper" id="downloadable">
+		<div class="wrapper">
 			<div class="header">
 				{% if picture %}
 					<div class="image" style="background-image: url('{{ picture }}')"></div>
@@ -82,8 +82,6 @@
 				<img src="/static/img/logo.png"/>
 			</div>
 		</div>
-		<script src="/static/js/html2canvas.js"></script>
-		<script src="/static/js/download.js"></script>
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5911c8ad46bf8abe"></script>
 	</body>
 </html>
