--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 	<head>
 		<meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,6 +47,11 @@
 			ga('create', 'UA-92654268-2', 'auto');
 			ga('send', 'pageview');
 		</script>
+
+		<!-- Angular -->
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+		<script src="/static/js/app/app.js"></script>
 	</head>
 	<body>
 		<div class="header">
@@ -54,6 +59,6 @@
 				<img src="/static/img/logo.svg"/>
 			</a>
 		</div>
-		{% block body %}{% endblock %}
+		<div ui-view></div>
 	</body>
 </html>
