--- a/templates/formats.html
+++ b/templates/formats.html
@@ -1,6 +1,6 @@
 <ul class="formats-list">
 	<li class="format">
-		<label>
+		<label onclick="ga('send', 'event', 'format', 'click', 'infographic')">
 			<input type="radio" name="format" value="infographic" checked/>
 			<span class="indicator"></span>
 			<span class="icon">
@@ -10,7 +10,7 @@
 		</label>
 	</li>
 	<li class="format disabled">
-		<label>
+		<label onclick="ga('send', 'event', 'format', 'click', 'video')">
 			<input type="radio" name="format" value="video" disabled/>
 			<span class="indicator"></span>
 			<span class="icon">
@@ -20,7 +20,7 @@
 		</label>
 	</li>
 	<li class="format disabled">
-		<label>
+		<label onclick="ga('send', 'event', 'format', 'click', 'audio')">
 			<input type="radio" name="format" value="audio" disabled/>
 			<span class="indicator"></span>
 			<span class="icon">
@@ -30,7 +30,7 @@
 		</label>
 	</li>
 	<li class="format disabled">
-		<label>
+		<label onclick="ga('send', 'event', 'format', 'click', 'slides')">
 			<input type="radio" name="format" value="slides" disabled/>
 			<span class="indicator"></span>
 			<span class="icon">
