--- a/templates/pills.html
+++ b/templates/pills.html
@@ -29,7 +29,7 @@
 
 					{% include "formats.html" %}
 
-					<button type="submit" class="button">
+					<button type="submit" class="button" onclick="ga('send', 'event', 'preview', 'download')">
 						<span class="icon">
 							<i class="fa fa-download"></i>
 						</span>
