--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,8 @@
 				</a>
 			</div>
 
-			<form class="search-form" method="GET" action="/pills">
-				<input type="text" name="query" placeholder="Busca algún personaje famoso..." autocomplete="off"/>
+			<form class="search-form" method="GET" action="/pills" onsubmit="ga('send', 'event', 'index', 'search', document.querySelector('input#query').value)">
+				<input type="text" id="query" name="query" placeholder="Busca algún personaje famoso..." autocomplete="off"/>
 				<button class="button" type="submit">
 					<span class="icon">
 						<i class="fa fa-search"></i>
@@ -72,7 +72,7 @@
 				<ul class="results-list">
 					{% for result in results %}
 						<li class="item">
-							<a href="/pills?query={{result}}&force=True">
+							<a href="/pills?query={{result}}&force=True" onclick="ga('send', 'event', 'index', 'search', {{result}})">
 								<b>{{result}}</b>
 							</a>
 						</li>
