--- a/templates/base.html
+++ b/templates/base.html
@@ -14,28 +14,29 @@
         <link rel="manifest" href="/static/img/ico/manifest.json">
         <link rel="mask-icon" href="/static/img/ico/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="shortcut icon" href="/static/img/ico/favicon.ico">
-		<PageMap>
-			<DataObject type="thumbnail">
-				<Attribute name="src" value="/static/img/ico/android-icon-192x192.png"/>
-				<Attribute name="width" value="100"/>
-				<Attribute name="height" value="130"/>
-			</DataObject>
-		</PageMap>
-
-        <meta name="thumbnail" content="/static/img/ico/android-icon-192x192.png" />
 
         <!--facebook-->
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="TheJuice">
-        <meta property="og:description" content="Translating teachers knowledge to fit into pupils social media">
-        <meta property="og:image" content="http://takethejuice.com/assets/images/thumbnail.png">
-        <meta property="og:url" content="http://takethejuice.com/">
+        <meta property="og:title" content="Thejuice">
+        <meta property="og:description" content="TheJuice History. Crea infografías de cualquier personaje histórico en menos de un minuto">
+        <meta property="og:image" content="http://takethejuice.com/assets/images/thumbnail-history.png">
+        <meta property="og:url" content="http://takethejuice.com/es/">
 
         <!--twitter-->
         <meta name="twitter:title" content="TheJuice">
-        <meta name="twitter:description" content="Translating teachers knowledge to fit into pupils social media">
-        <meta name="twitter:image" content="http://takethejuice.com/assets/images/thumbnail.png">
+        <meta name="twitter:description" content="TheJuice History. Crea infografías de cualquier personaje histórico en menos de un minuto">
+        <meta name="twitter:image" content="http://takethejuice.com/assets/images/thumbnail-history.png">
         <meta name="twitter:card" content="summary_large_image">
+
+        <PageMap>
+             <DataObject type="thumbnail">
+               <Attribute name="src" value="assets/images/ico/android-icon-192x192.png"/>
+               <Attribute name="width" value="100"/>
+               <Attribute name="height" value="130"/>
+             </DataObject>
+           </PageMap>
+
+        <meta name="thumbnail" content="assets/images/ico/android-icon-192x192.png" />
 
 		<!-- GA -->
 		<script>
