--- a/static/style/style.css
+++ b/static/style/style.css
@@ -102,6 +102,61 @@ body {
       width: 100%;
       max-width: 400px; }
 
+.spinner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.9);
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .2s ease-in-out; }
+  .spinner.show {
+    opacity: 1;
+    visibility: visible; }
+  .spinner .spinner-inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    max-width: 450px; }
+    .spinner .spinner-inner img {
+      display: inline-block;
+      vertical-align: top; }
+    .spinner .spinner-inner p {
+      display: block;
+      padding: 10px 25px;
+      font-size: 26px;
+      line-height: 40px; }
+
+.notification {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  background: #e74c3c;
+  display: inline-block;
+  vertical-align: top;
+  width: auto;
+  height: auto;
+  padding: 15px 25px;
+  max-width: 300px;
+  color: white;
+  border-radius: 5px;
+  box-shadow: 0px 5px 3px #f7e4e4;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .5s ease-in-out; }
+  .notification.show {
+    opacity: 1;
+    visibility: visible; }
+  .notification p {
+    display: inline-block; }
+
 /**
 	Home
  */
@@ -231,8 +286,7 @@ body {
       font-size: 0;
       border-bottom: 1px solid #eee; }
       .pills .preview .preview-table .tr.thead {
-        border-bottom: 2px solid #eee;
-        text-align: center; }
+        border-bottom: 2px solid #eee; }
         .pills .preview .preview-table .tr.thead .tc {
           font-size: 18px;
           font-weight: bold; }
@@ -245,22 +299,26 @@ body {
         padding: 10px 2%; }
         .pills .preview .preview-table .tr .tc.col1 {
           width: 25%;
-          padding: 16px 4%; }
+          padding: 16px 2%; }
         .pills .preview .preview-table .tr .tc.col2 {
-          width: 75%; }
+          width: 75%;
+          padding: 16px 2%; }
         .pills .preview .preview-table .tr .tc .textarea {
           display: inline-block;
           vertical-align: top;
           width: 100%;
           height: auto;
           padding: 8px 2%;
-          border: 1px solid transparent; }
+          border: 1px solid transparent;
+          font-size: initial;
+          font-weight: 300;
+          resize: none; }
           .pills .preview .preview-table .tr .tc .textarea.editable {
             border-radius: 3px;
             transition: all .25s ease-in-out;
             outline: none; }
             .pills .preview .preview-table .tr .tc .textarea.editable:hover {
-              border: 1px solid #eeeeee; }
+              border: 1px solid #ddd; }
               .pills .preview .preview-table .tr .tc .textarea.editable:hover::after {
                 content: '';
                 position: absolute;
@@ -282,7 +340,7 @@ body {
     top: 0; }
     .pills .formats .formats-inner {
       border-left: 1px solid #111;
-      padding: 2vh 1vw 1vh 0; }
+      padding: 2vh 1vw 1vh; }
       .pills .formats .formats-inner .text {
         display: inline-block;
         vertical-align: top;
