--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -114,6 +114,65 @@ body {
 		}
 	}
 }
+.spinner {
+	position: fixed;
+	top: 0; left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(255, 255, 255, 0.9);
+	z-index: 1000;
+	opacity: 0;
+	visibility: hidden;
+	transition: all .2s ease-in-out;
+	&.show {
+		opacity: 1;
+		visibility: visible;
+	}
+	.spinner-inner {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: auto;
+		height: auto;
+		transform: translate(-50%, -50%);
+		text-align: center;
+		max-width: 450px;
+		img {
+			display: inline-block;
+			vertical-align: top;
+		}
+		p {
+			display: block;
+			padding: 10px 25px;
+			font-size: 26px;
+			line-height: 40px;
+		}
+	}
+}
+
+.notification {
+	position: absolute;
+    top: 50px;
+    left: 50px;
+    background: #e74c3c;
+    display: inline-block;
+    vertical-align: top;
+    width: auto;
+    height: auto;
+    padding: 15px 25px;
+    max-width: 300px;
+    color: white;
+    border-radius: 5px;
+    box-shadow: 0px 5px 3px #f7e4e4;
+	opacity: 0;
+	visibility: hidden;
+	transition: all .5s ease-in-out;
+	&.show {
+		opacity: 1;
+		visibility: visible;
+	}
+	p {display: inline-block;}
+}
 
 /**
 	Home
@@ -253,7 +312,6 @@ body {
 				font-size: 16px;
 			}
 		}
-
 		.preview-table {
 			display: inline-block;
 			vertical-align: top;
@@ -269,13 +327,11 @@ body {
 				border-bottom: 1px solid #eee;
 				&.thead {
 					border-bottom: 2px solid #eee;
-					text-align: center;
 					.tc{
 						font-size: 18px;
 						font-weight: bold;
 					}
 				}
-
 				.tc {
 					display: inline-block;
 					vertical-align: top;
@@ -283,13 +339,14 @@ body {
 					height: auto;
 					font-size: initial;
 					padding: 10px 2%;
-
 					&.col1 {
 						width: 25%;
-						padding: 16px 4%;
+						padding: 16px 2%;
 					}
-					&.col2 {width: 75%;}
-
+					&.col2 {
+						width: 75%;
+						padding: 16px 2%;
+					}
 					.textarea {
 						display: inline-block;
 						vertical-align: top;
@@ -297,19 +354,20 @@ body {
 						height: auto;
 						padding: 8px 2%;
 						border: 1px solid transparent;
-
+						font-size: initial;
+						font-weight: 300;
+						resize: none;
 						&.editable {
 							border-radius: 3px;
 							transition: all .25s ease-in-out;
 							outline: none;
 							&:hover {
-								border: 1px solid #eeeeee;
+								border: 1px solid #ddd;
 								&::after {
 									content: '';
 									position: absolute;
 									width: 1px;
 									height: 1.2em;
-
 									animation-name: cursor;
 									animation-delay: 0.25s;
 									animation-duration: 1s;
@@ -317,7 +375,6 @@ body {
 									animation-iteration-count: infinite;
 								}
 							}
-
 							&:focus {
 								border: 1px solid rgba(0, 124, 160, 0.6);
 								&::after {
@@ -341,7 +398,7 @@ body {
 
 		.formats-inner {
 			border-left: 1px solid #111;
-			padding: 2vh 1vw 1vh 0;
+			padding: 2vh 1vw 1vh;
 
 			.text {
 				display: inline-block;
