--- a/static/templates/preview.html
+++ b/static/templates/preview.html
@@ -1,4 +1,4 @@
-<form class="pills" action="/download" method="GET">
+<form class="pills" ng-submit="download()">
 	<input type="hidden" name="query" value="{{title}}">
 
 	<div class="wrapper-with-padding columns">
@@ -8,31 +8,32 @@
 				<div class="img ng-hide" ng-show="results.picture" style="background-image: url('{{ results.picture }}')"></div>
 				<div class="info" ng-class="{'with-image': results.picture}">
 					<h1>{{ results.title }}</h1>
-					<p>Estos son los datos encontrados:</p>
+					<p>We found all of this information:</p>
 				</div>
 			</div>
 			<!-- Preview -->
 			<ul class="preview-table">
 				<li class="tr thead">
-					<div class="tc col1">Fecha</div>
-					<div class="tc col2">Hito</div>
+					<div class="tc col1">Date</div>
+					<div class="tc col2">Content</div>
 				</li>
-				<li class="tr" ng-repeat="hit in results.hits">
+				<li class="tr" ng-repeat="hit in results.hits" ng-hide="hit.content == ''">
 					<div class="tc col1">{{ hit.date }}</div>
 					<div class="tc col2">
-						<div class="textarea" disabled-class="editable" disabled-attr="contentEditable">{{ hit.content }}</div>
+						<!--<div class="textarea editable" ng-model="hit.content" contenteditable></div>-->
+						<div class="textarea">{{ hit.content }}</div>
 					</div>
 				</li>
 			</ul>
 		</div>
 		<div class="formats right-col">
 			<div class="formats-inner">
-				<span class="text">Convertir datos en:</span>
+				<span class="text">Transform into:</span>
 				<!-- Formats -->
 				<ul class="formats-list">
 					<li class="format">
 						<label sdfsd="ga('send', 'event', 'format', 'click', 'infographic')">
-							<input type="radio" name="format" value="infographic" checked/>
+							<input type="radio" ng-model="format" value="infographic" ng-checked="true"/>
 							<span class="indicator"></span>
 							<span class="icon">
 								<i class="fa fa-code-fork"></i>
@@ -42,7 +43,7 @@
 					</li>
 					<li class="format disabled">
 						<label sdfsd="ga('send', 'event', 'format', 'click', 'video')">
-							<input type="radio" name="format" value="video" disabled/>
+							<input type="radio" ng-model="format" value="video" disabled/>
 							<span class="indicator"></span>
 							<span class="icon">
 								<i class="fa fa-film"></i>
@@ -52,7 +53,7 @@
 					</li>
 					<li class="format disabled">
 						<label sdfsd="ga('send', 'event', 'format', 'click', 'audio')">
-							<input type="radio" name="format" value="audio" disabled/>
+							<input type="radio" ng-model="format" value="audio" disabled/>
 							<span class="indicator"></span>
 							<span class="icon">
 								<i class="fa fa-volume-up"></i>
@@ -62,7 +63,7 @@
 					</li>
 					<li class="format disabled">
 						<label sdfsd="ga('send', 'event', 'format', 'click', 'slides')">
-							<input type="radio" name="format" value="slides" disabled/>
+							<input type="radio" ng-model="format" value="slides" disabled/>
 							<span class="indicator"></span>
 							<span class="icon">
 								<i class="fa fa-clone"></i>
@@ -75,7 +76,7 @@
 					<span class="icon">
 						<i class="fa fa-download"></i>
 					</span>
-					Convertir
+					Transform
 				</button>
 			</div>
 		</div>
