--- a/templates/formats/infographic.html
+++ b/templates/formats/infographic.html
@@ -47,7 +47,7 @@
 
 			ga('create', 'UA-92654268-2', 'auto');
 			ga('send', 'pageview');
-			ga('send', 'event', 'output', 'infographic', {{ title }});
+			ga('send', 'event', 'output', 'infographic', '{{ title }}');
 		</script>
 	</head>
 	<body>
