--- a/static/style/infographic.css
+++ b/static/style/infographic.css
@@ -69,7 +69,7 @@ body {
     top: -10px;
     left: -10px;
     border-radius: 50%;
-    z-index: -1;r
+    z-index: -1;
 }
 
 .header .image:after {
