--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -189,7 +189,7 @@ body {
     padding: 50px 5% 100px;
 	text-align: center;
 
-	.search-form {
+	.search-form, .login-form {
 		display: inline-block;
 		vertical-align: top;
 		width: 100%;
