--- a/templates/index.html
+++ b/templates/index.html
@@ -59,10 +59,10 @@
 		</script>
 
 		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="/static/js/vendor/jquery-3.2.1.min.js"></script>
 
 		<!-- Angular -->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+		<script src="/static/js/vendor/angular.min.js"></script>
 		<script src="/static/js/vendor/angular-ui-router.min.js"></script>
 		<script src="/static/js/app/app.js"></script>
 	</head>
@@ -84,8 +84,9 @@
 		<!-- Factory -->
 		<script src="/static/js/app/factory.js"></script>
 		<!-- UI Elements -->
-		<script src="/static/js/app/controllers/ui-utils.js"></script>
+		<script src="/static/js/app/ui-elements.js"></script>
 		<!-- Controllers -->
+		<script src="/static/js/app/controllers/login.js"></script>
 		<script src="/static/js/app/controllers/search.js"></script>
 		<script src="/static/js/app/controllers/preview.js"></script>
 	</body>
