--- a/static/style/style.css
+++ b/static/style/style.css
@@ -170,7 +170,7 @@ body {
   margin: 0 auto;
   padding: 50px 5% 100px;
   text-align: center; }
-  .index .search-form {
+  .index .search-form, .index .login-form {
     display: inline-block;
     vertical-align: top;
     width: 100%;
@@ -179,7 +179,7 @@ body {
     max-width: 640px;
     margin: 2vh 0;
     font-size: 0; }
-    .index .search-form input {
+    .index .search-form input, .index .login-form input {
       display: inline-block;
       vertical-align: top;
       width: 67%;
@@ -194,7 +194,7 @@ body {
       outline: none;
       box-sizing: border-box;
       box-shadow: 0px 5px 3px #f2f2f2; }
-    .index .search-form .button {
+    .index .search-form .button, .index .login-form .button {
       width: 30%;
       height: 50px;
       box-shadow: 0px 5px 3px #f2f2f2; }
