--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -6,23 +6,27 @@
 	</div>
 
 	<form class="search-form" ng-submit="submitSearchForm()">
-		<input type="text" ng-model="query" placeholder="Search a historical character..." autocomplete="off"/>
+		<div class="languages">
+			<input type="radio" id="langen" name="lang" ng-model="lang" value="en" ng-checked="true">
+			<label for="langen">
+				<img src="/static/img/flags/en.png"/>
+				EN
+			</label>
+			<input type="radio" id="langes" name="lang" ng-model="lang" value="es">
+			<label for="langes">
+				<img src="/static/img/flags/es.png"/>
+				ES
+			</label>
+		</div>
+
+		<input type="text" class="query" name="query" ng-model="query" placeholder="Search a historical character..." autocomplete="off"/>
 		<button class="button" type="submit">
 			<span class="icon">
 				<i class="fa fa-search"></i>
 			</span>
 			Search
 		</button>
-	</form>
 
-	<div class="results ng-hide" ng-show="results">
-		<p class="results-message">¡Nice! We found some results for <i>{{query}}</i>. Choose one:</p>
-		<ul class="results-list">
-			<li class="item" ng-repeat="result in results track by $index">
-				<a href ng-click="forceSearchForm(result)">
-					<b>{{result}}</b>
-				</a>
-			</li>
-		</ul>
-	</div>
+		<autosuggestions query="query" lang="lang" callback="submitSearchForm(name)"></autosuggestions>
+	</form>
 </div>
