New background and styles for infographic

--- a/templates/formats/infographic.html
+++ b/templates/formats/infographic.html
@@ -91,7 +91,9 @@
 			{% endfor %}
 
 			<div class="logo">
-				<img src="/static/img/logo.png"/>
+				<span>Automatically generated with</span>
+				<a target="_blank" href="http://takethejuice.com"><img src="/static/img/logo.png"/></a>
+				<a target="_blank" href="http://takethejuice.com"><small>http://takethejuice.com</small></a>
 			</div>
 		</div>
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5911c8ad46bf8abe"></script>
