--- a/static/style/infographic.css
+++ b/static/style/infographic.css
@@ -174,6 +174,18 @@ body {
 	max-width: 300px;
 }
 
+.logo span {
+	display: block;
+	vertical-align: top;
+	width: auto;
+	height: auto;
+	margin: 15px 0 10px;
+	padding: 5px 10px;
+	background: #0085AC;
+	color: white;
+	font-size: 20px;
+}
+
 .logo img {
 	display: inline-block;
 	vertical-align: top;
